refactor: make the menu responsive to screen width (#6228)
* chore: convert routes

* chore: stash

* chore: stash

* feat: support to add menu item

* feat: add MenuSchemaToolbar

* refactor: extract EditMenuItem component

* feat: add hidden option

* refactor: extract HiddenMenuItem

* feat: add 'Move to' option

* feat: add insert options

* feat: remove route

* fix: children

* fix: route

* feat: enhance menu item rendering and group handling in admin layout

* feat: add container support to MenuSchemaToolbar and fix display issue in Group

* fix: add conditional check before moving routes in menu item settings

* feat(navigation): add default page navigation for admin layout

* chore(versions): 😊 publish v1.6.0-alpha.24

* feat: export AppNotFound component and integrate 404 handling in AdminDynamicPage

* fix: update admin layout route path to use item options URL

* chore(versions): 😊 publish v1.6.0-alpha.25

* refactor: rename route node retrieval functions for clarity and add legacy route compatibility

* refactor: clean up layout component by removing unused styles and improving header rendering

* refactor: simplify menu item components by removing unused schema insertion logic and optimizing imports

* refactor: add 'x-async' property to tab schema and clean up server imports

* refactor: tabs

* feat: support extending frontend filter operators (#6085)

* feat: operator extension

* fix: bug

* refactor: code improve

* fix: jsonLogic

---------

Co-authored-by: chenos <chenlinxh@gmail.com>

* feat: add fake schema for routing in SortableItem and remove unused fieldSchema import

* feat: adjust content padding in InternalAdminLayout for improved layout

* refactor: remove registerOperators (#6224)

* refactor(plugin-workflow): trigger workflow action settings (#6143)

* refactor(plugin-workflow): move bind workflow settings to plugin

* refactor(plugin-block-workbench): move component to core

* refactor(plugin-block-workbench): adjust 

--- a/packages/core/client/src/global.less
+++ b/packages/core/client/src/global.less
@@ -27,9 +27,21 @@
   .rc-virtual-list-scrollbar-thumb {
     background: var(--colorBgScrollBar) !important;
   }
+
   .rc-virtual-list-scrollbar-thumb:hover {
     background: var(--colorBgScrollBarHover) !important;
   }
+
   .rc-virtual-list-scrollbar-thumb:active {
     background: var(--colorBgScrollBarActive) !important;
+  }
+
+  // Fix the style of the top collapsed menu button dropdown
+  .ant-menu-submenu-popup {
+    backdrop-filter: none;
+  }
+
+  // Fix the style of the top collapsed menu button dropdown when clicking
+  .ant-menu-item.ant-menu-item-only-child.ant-pro-base-menu-horizontal-menu-item:active {
+    background-color: var(--colorBgMenuItemSelected) !important;
   }
